# ai_roguelike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_from_scratch.sh  debug.sh  readme.md  release.sh
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
diagrams/: berserker.puml  healer.puml  squire.puml  villager.puml
pathfinding/: CMakeLists.txt  dungeonGen.cpp  dungeonGen.h  dungeonUtils.cpp  dungeonUtils.h  main.cpp  math.h
w1/: CMakeLists.txt  aiLibrary.cpp  aiLibrary.h  app.cpp  app.h  debug_draw_inc.h  ecsTypes.h  entity.h  flecs_inc.h  main.cpp  protocol.cpp  protocol.h  roguelike.cpp  roguelike.h  stateMachine.cpp  stateMachine.h  w1.sln  w1.vcxproj
w2/: CMakeLists.txt  aiLibrary.cpp  aiLibrary.h  aiUtils.h  behLibrary.cpp  behaviourTree.h  blackboard.h  ecsTypes.h  main.cpp  math.h  roguelike.cpp  stateMachine.h  w2.sln  w2.vcxproj
w3/: CMakeLists.txt  aiLibrary.h  behLibrary.cpp  ecsTypes.h  main.cpp  roguelike.cpp  roguelike.h  stateMachine.h  utility_boundaries.ipynb
w4/: CMakeLists.txt  aiLibrary.cpp  behLibrary.cpp  dijkstraMapGen.cpp  dijkstraMapGen.h  dmapFollower.cpp  dmapFollower.h  dungeonGen.cpp  ecsTypes.h  main.cpp  roguelike.cpp  roguelike.h  stateMachine.cpp
w5/: CMakeLists.txt  aiLibrary.cpp  aiUtils.h  behLibrary.cpp  blackboard.h  dijkstraMapGen.cpp  dmapBeh.cpp  dmapBeh.h  dmapFollower.cpp  dungeonGen.h  dungeonUtils.cpp  ecsTypes.h  goapAction.cpp  goapAction.h  goapPlan.cpp  goapPlanner.cpp  goapPlanner.h  goapWorldState.h  main.cpp  math.h  rlikeObjects.cpp  rlikeObjects.h  roguelike.cpp
w6/: CMakeLists.txt  ecsTypes.h  main.cpp  shootEmUp.cpp  shootEmUp.h  steering.cpp  steering.h
w7/: CMakeLists.txt  dungeonGen.cpp  dungeonUtils.cpp  dungeonUtils.h  ecsTypes.h  main.cpp  pathfinder.cpp  pathfinder.h  rlikeObjects.cpp  rlikeObjects.h  shootEmUp.cpp  shootEmUp.h  steering.cpp
w8/: CMakeLists.txt  dungeonGen.cpp  dungeonGen.h  dungeonUtils.h  main.cpp  math.h
